--- a/trunk/Obi/Obi/Dialogs/Preferences.fr.resx
+++ b/trunk/Obi/Obi/Dialogs/Preferences.fr.resx
@@ -112,15 +112,15 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="helpProvider1.HelpNamespace" xml:space="preserve">
     <value>Obi Help.fr.chm</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="mOKButton.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
@@ -241,6 +241,13 @@
   <data name="m_lblProfile2.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="m_lblProfile2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>54, 16</value>
+  </data>
+  <data name="m_lblProfile2.Text" xml:space="preserve">
+    <value>Profil 2 :</value>
+  </data>
   <data name="m_cb_Profile2.AccessibleName" xml:space="preserve">
     <value>Profile 2 pour la barre d'enregistrement</value>
   </data>
@@ -276,6 +283,12 @@
   </data>
   <data name="m_lblProfile1.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
+  </data>
+  <data name="m_lblProfile1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>54, 16</value>
+  </data>
+  <data name="m_lblProfile1.Text" xml:space="preserve">
+    <value>Profil 1 :</value>
   </data>
   <data name="m_gpBox_SelectProfileRecordingToolbar.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -325,7 +338,6 @@
   <data name="m_lblSelectedShortcuts.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_lblSelectedShortcuts.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 42</value>
   </data>
@@ -1636,6 +1648,9 @@
   <data name="mTab.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
+  <data name="mTab.Location" type="System.Drawing.Point, System.Drawing">
+    <value>8, 13</value>
+  </data>
   <data name="m_ApplyButton.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
   </data>
@@ -1647,6 +1662,24 @@
   </data>
   <data name="m_ApplyButton.Text" xml:space="preserve">
     <value>A&amp;ppliquer</value>
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.HelpNavigator" type="System.Windows.Forms.HelpNavigator, System.Windows.Forms">
+    <value>AssociateIndex</value>
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.HelpString" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.Location" type="System.Drawing.Point, System.Drawing">
+    <value>677, 352</value>
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.Size" type="System.Drawing.Size, System.Drawing">
+    <value>246, 52</value>
+  </data>
+  <data name="m_btnAdvanceSettingsPreferences.Text" xml:space="preserve">
+    <value>Paramètres Complémentaires</value>
   </data>
   <data name="$this.HelpKeyword" type="System.Resources.ResXNullRef, System.Windows.Forms">
     <value />
@@ -1915,23 +1948,5 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Edition des préférences</value>
-  </data>
-  <data name="mOKButton.Text" xml:space="preserve">
-    <value>&amp;OK</value>
-  </data>
-  <data name="m_lblProfile2.Text" xml:space="preserve">
-    <value>Profil 2 :</value>
-  </data>
-  <data name="m_lblProfile1.Text" xml:space="preserve">
-    <value>Profil 1 :</value>
-  </data>
-  <data name="m_btnProfileDiscription.Text" xml:space="preserve">
-    <value>?</value>
-  </data>
-  <data name="m_chkAudio.Text" xml:space="preserve">
-    <value>A&amp;udio</value>
-  </data>
-  <data name="mAudioTab.Text" xml:space="preserve">
-    <value>Audio</value>
   </data>
 </root>
